--- a/components/currency-converter.css
+++ b/components/currency-converter.css
@@ -36,5 +36,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: whitesmoke;
+    color: black;
+    transition: ease-in;
 }
