--- a/components/snake-game.css
+++ b/components/snake-game.css
@@ -21,7 +21,7 @@ body {
     text-align: center;
     padding: 20px;
     border: 1px solid whitesmoke; 
-    border-radius: 5px; 
+    border-radius: 10px; 
 }
 
 #logo-img {
@@ -35,19 +35,20 @@ body {
     display: none;
 }
 
-#start-button {
+#start-button, #reload-button {
     padding: 10px 20px;
     font-size: 20px;
     cursor: pointer;
     background-color: black;
     color: white;
     border: 1px solid whitesmoke;
-    border-radius: 15px;
+    border-radius: 10px;
     transition: background-color 0.3s;
 }
 
-#start-button:hover {
-    background-color: #45a049;
+#start-button:hover, #reload-button:hover {
+    background-color: whitesmoke;
+    color: black;
 }
 
 .game-container { 
@@ -70,5 +71,5 @@ body {
     padding: 40px;
     font-family: 'Poppins';
     font-weight: 100;
-    border-radius: 20px;
+    border-radius: 10px;
 }
