--- a/components/weather.css
+++ b/components/weather.css
@@ -1,5 +1,5 @@
 .container {
-    color: #fff;
+    color: whitesmoke;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,7 +15,7 @@
 .current-info .others {
     display: flex;
     flex-direction: column;
-    background: rgba(24, 24, 27, 0.6);
+    background: rgba(0, 0, 0, 0.6);
     justify-content: space-between;
     border-radius: 10px;
     border: 1px solid whitesmoke;
@@ -33,7 +33,7 @@
 }
 
 .weather-forecast {
-    background: rgba(24, 24, 27, 0.6);
+    background: rgba(0, 0, 0, 0.6);
     padding: 25px;
     display: flex;
     justify-content: space-between;
@@ -48,7 +48,7 @@
   
 * {
     scrollbar-width: auto;
-    scrollbar-color: #ffffff none;
+    scrollbar-color: whitesmokefff none;
   }
 
   *::-webkit-scrollbar {
@@ -60,7 +60,7 @@
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #fff;
+    background-color: whitesmoke;
     border-radius: 10px;
     border: 1px white ;
   }
@@ -71,7 +71,7 @@
     padding: 15px;
     border: 1px solid whitesmoke;
     border-radius: 10px;
-    background: rgba(24, 24, 27, 0.3);
+    background: rgba(0, 0, 0, 0.3);
     min-width: 150px;
     box-sizing: border-box;
     font-weight: 100;
@@ -84,7 +84,7 @@
 
 .weather-forecast .day {
     border-radius: 50px;
-    border: 1px solid #eee;
+    border: 1px solid whitesmoke;
     padding: 5px 15px;
     margin-bottom: 20px;
     width: 95%;
